--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,37 +24,42 @@ h1 {
 
 p {
   position: relative;
-  border: solid 2px #80c8d1;
+  border: solid 2px #1e90ff;
   background: #f4f4f4;
   line-height: 1.4;
   padding: 0.4em 0.5em;
   margin: 2em 0 0.5em;
+  width: auto;
 }
 
 p:before {
   /*タブ*/
   position: absolute;
   font-family: "Font Awesome 5 Free",'Quicksand','Avenir','Arial',sans-serif;
-  content: '\f0a7\ POSTED';
-  background: #80c8d1;
+  content: '\f0a7\ POSTED!!';
+  background: #1e90ff;
   color: #fff;
   left: 0px;
   bottom: 100%;
   border-radius: 5px 5px 0 0;
   padding: 5px 7px 3px;
-  font-size: 0.7em;
+  font-size: 1em;
   line-height: 1;
   letter-spacing: 0.05em;
 }
 
 .form-group .form-control {
-  width: 400px;
+  width: 600px;
+  height: 7em;
+  border:solid 2px #2e8b57;
 }
 
 #button {
-  margin-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 18px;
 }
 
-#messages {
-  margin-top: 15px;
-} 
+p.message {
+  font-size: 16px;
+}
